# jarvis

./: .env.example  .gitignore  README.md  android_adb.py  jarvis_adb_tools.py  jarvis_browser_routines.py  jarvis_coding_lab.py  jarvis_tools.py  local_jarvis.py  phone_adb_control.py  pyproject.toml  session_memory.py
scripts/: fetch_platform_tools.py
