[project]
name = "livrkit-agent"
version = "2.0.0"
description = "Jarvis AI — fully local: faster-whisper STT + Ollama LLM + Edge TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "ollama>=0.3",
    "edge-tts>=7.0",
    "pygame>=2.5",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "ddgs>=9.4",
    "python-dotenv>=1.2.2",
]
